<resources>
    <string name="app_name">FirstNews</string>
    <string name="Header1">Заголовок #1</string>
    <string name="text1">Текст#1 Текст#1 Текст#1 Текст#1</string>
    <string name="NewsKatyusha">На видео малышка прогуливается вдоль стекла экспозиционного вольера и радует своей любознательностью гостей. — Счастливые посетители, к которым Катюша пришла общаться. Она абсолютно свободно себя чувствует во внутреннем вольере, — следует из подписи к публикации. Гендиректор зоосада также поблагодарила посетителей за то, что они сохраняют тишину в павильоне медвежонка и не стучат по стеклу, чтобы привлечь его внимание. Светлана Акулова 7 мая поделилась видео с досугом панды Диндин и ее дочки Катюши во время заморозков. Медвежонок спрятался в веточках бамбука. Однако смышленая родительница быстро нашла малышку и освободила ее из плена ветвей. Позднее панды приступили к обеденной трапезе. Гендиректор зоопарка также разместила видео с взрослеющей Катюшей. На кадрах медвежонок с усердием поедает ростки бамбука, изредка поглядывая на то, как это делает ее мама Диндин. Катюша во всем берет с родительницы пример.</string>
    <string name="Header2">Заголовок #2</string>
    <string name="text2">Текст#2 Текст#2 Текст#2 Текст#2</string>
    <string name="Header3">Заголовок #3</string>
    <string name="text3">Текст#3 Текст#3 Текст#3 Текст#3</string>
</resources>